[package]
name = "kernel-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cfg-if = "1.0.0"
lock_api = { version = "0.4" ,optional = true}


[features]
default = ["lockapi"]
lockapi = ['lock_api']
kernel = []


[dev-dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv", rev = "cd31989ba1", features = ["inline-asm"] }