[package]
name = "kernel-sync"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cfg-if = "1.0.0"
lock_api = { version = "0.4" ,optional = true}
riscv = { version = "0",optional = true }

[features]
default = ["lockapi"]
lockapi = ['lock_api']
riscv = ["dep:riscv"]

[dev-dependencies]
kernel-sync = {path = ".",features = ["riscv"]}
# kernel-sync = {path = "."}
