[package]
name = "kernel-sync"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lock_api = { version = "0.4" ,optional = true}



[features]
default = ["lockapi","empty"]
lockapi = ['lock_api']
empty = []
